user profile added

--- a/views/admin/Products/product.ejs
+++ b/views/admin/Products/product.ejs
@@ -40,8 +40,8 @@
               <div class="input-group-prepend bg-transparent">
                 <i class="input-group-text border-0 mdi mdi-magnify"></i>
               </div>
-              <input type="text" class="form-control bg-transparent border-0" placeholder="Search projects">
-            </div>
+              <input type="text" class="form-control" placeholder="Search User name,email" name="search">
+              <input type="submit" class="btn btn-primary" value="Search">            </div>
           </form>
         </div>
         <ul class="navbar-nav navbar-nav-right">
