--- a/views/users/Profile/editAddress.ejs
+++ b/views/users/Profile/editAddress.ejs
@@ -6,11 +6,14 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Kiona</title>
 
+    <!-- logo -->
     <link rel="icon" type="image/png" href="/kiona-logo.png" />
 
-    <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+    <!-- to navbar  -->
+    <link rel="stylesheet" type="text/css" href="/css/util.css">
+    <link rel="stylesheet" type="text/css" href="/css/main.css">
 
+    <!-- page styles -->
     <link rel="stylesheet" type="text/css" href="/css/userProfile.css">
     <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css'>
 
@@ -120,22 +123,22 @@
 
 
                 <div class="card mb-4">
-                    <div class="card-header">Add Address</div>
+                    <div class="card-header">Edit Address</div>
                     <div class="card-body">
+
                         <form id="form">
-
-
                             <!-- Form Row-->
                             <div class="row gx-3 mb-3">
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="name">Name</label>
-                                    <input class="form-control" id="name" name="name" type="text" placeholder=" Name">
+                                    <input class="form-control" id="name" name="name" type="text"
+                                        value=" <%= address.name %> ">
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="mobile">Mobile Number</label>
-                                    <input class="form-control" id="mobile" name="mobile" type="number"
-                                        placeholder="10-digits Mobile No">
+                                    <input type="number" name="mobile" id="mobile" class="form-control"
+                                        value="<%= address.mobile %>" required>
                                 </div>
                             </div>
 
@@ -143,56 +146,62 @@
                             <div class="row gx-3 mb-3">
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="inputOrgName"> Pincode </label>
-                                    <input class="form-control" id="pincode" name="pincode" type="number"
-                                        placeholder="Pincode">
+                                    <input type="number" name="pincode" id="pincode" class="form-control"
+                                        value="<%= address.pincode %>" required>
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="inputLocation">Locality</label>
                                     <input class="form-control" id="locality" name="locality" type="text"
-                                        placeholder="Locality">
+                                        value=" <%= address.locality %> ">
                                 </div>
                             </div>
 
                             <div class="mb-3">
                                 <label class="small mb-1" for="inputEmailAddress">Address</label>
-                                <textarea class="form-control" name="address" id="address" rows="4" tabindex="5" required="" autocomplete="street-address" style="width: 100%;"></textarea>
+                                <textarea class="form-control" name="address" id="address" rows="4" tabindex="5"
+                                    required="" autocomplete="street-address"
+                                    style="width: 100%;"> <%= address.address %> </textarea>
                             </div>
-                            
-                            
+
+
                             <!-- Form Row-->
                             <div class="row gx-3 mb-3">
 
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="inputPhone">City/District</label>
                                     <input class="form-control" id="city" name="city" type="text"
-                                        placeholder="City/District">
+                                        value=" <%= address.city %> ">
                                 </div>
 
                                 <div class="col-md-6">
                                     <label class="small mb-1" for="inputBirthday">States</label>
                                     <input class="form-control" id="state" type="text" name="state"
-                                        placeholder="States">
+                                        value=" <%= address.state %> ">
                                 </div>
                             </div>
 
-                            
+
                             <div class="mb-3">
                                 <label class="small mb-1" for="inputAddressType">Address Type</label>
-                                    <div class="col-md-6">
-                                        <input class="form-check-input" type="radio" id="home" name="addressType" value="Home">
-                                        <label class="form-check-label" for="home">Home</label>
-                                    </div>
-                                    <div class="col-md-6">
-                                        <input class="form-check-input" type="radio" id="work" name="addressType" value="Work">
-                                        <label class="form-check-label" for="work">Work</label>
-                                    </div>
+                                <div class="col-md-6">
+                                    <input class="form-check-input" type="radio" id="home" name="addressType"
+                                        value="<%= address.addressType %>">
+                                    <label class="form-check-label" for="home">Home</label>
+                                </div>
+                                <div class="col-md-6">
+                                    <input class="form-check-input" type="radio" id="work" name="addressType"
+                                        value="<%= address.addressType %>">
+                                    <label class="form-check-label" for="work">Work</label>
+                                </div>
                             </div>
-                            
+
+
+                            <input type="text" name="" id="addressId" value="<%= address._id %>" hidden>
 
                             <!-- Save changes button-->
                             <a href="/address"> <button class="btn btn-danger" type="button">Back</button> </a>
-                            <a href=""> <button class="btn btn-primary" type="submit">Save Address</button> </a>
+                            <button class="btn btn-primary" type="submit">Save Address</button>
                         </form>
                     </div>
                 </div>
@@ -215,47 +224,67 @@
 
 
     <script>
-        const formElement = document.getElementById('form');
+
+
         document.getElementById("form").addEventListener('submit', async (e) => {
             e.preventDefault();
 
+            const formElement = document.getElementById('form');
+            const addressId = document.getElementById('addressId').value;
             const formData = new FormData(formElement);
 
-            const formValues = {};
+            let formValues = {}
 
             for (const entry of formData.entries()) {
                 const [key, value] = entry;
                 formValues[key] = value;
             }
 
-            console.log(formValues)
+            const confirmation = await Swal.fire({
+                title: 'Are you sure?',
+                text: 'You won\'t be able to revert this!',
+                icon: 'warning',
+                showCancelButton: true,
+                confirmButtonColor: '#3085d6',
+                cancelButtonColor: '#d33',
+                confirmButtonText: 'Yes, Update Address!'
+            });
+
+            if (!confirmation.isConfirmed) {
+                return;
+            }
 
             try {
-                const response = await axios.post('/addAddress', formValues);
+
+                const response = await axios.post(`/address/editAddress?addressId=${addressId}`, formValues);
+
                 if (response.data.success) {
-                    Swal.fire({
-                        title: "Success",
-                        icon: "success",
+                    await Swal.fire({
+                        icon: 'success',
+                        title: 'Update Address!',
                         text: response.data.message
                     }).then(() => {
-                        window.location.href = '/addAddress'; // Redirect if successful
-                    })
+                        window.location.href = `/address`;
+                    });
                 } else {
-                    Swal.fire({
-                        title: "Error",
-                        icon: "error",
+                    await Swal.fire({
+                        icon: 'error',
+                        title: 'Error',
                         text: response.data.message
                     });
+                    window.location.href = `/address/editAddress?id=${addressId}`;
                 }
             } catch (error) {
-                console.error("Error submitting form: ", error.message);
+                console.error("Error updating Address: ", error.message);
                 Swal.fire({
-                    title: "Error",
-                    icon: "error",
-                    text: "There was an error submitting your form"
+                    icon: 'error',
+                    title: 'Error',
+                    text: 'There was an error updating the profile'
                 });
             }
-        });
+
+        })
+
     </script>
 
 
