--- a/views/users/Profile/userAddressManagement.ejs
+++ b/views/users/Profile/userAddressManagement.ejs
@@ -1,82 +1,91 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Kiona</title>
+	<meta charset="UTF-8">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+	<title>Kiona</title>
 
 	<link rel="icon" type="image/png" href="/kiona-logo.png" />
 
-    <link rel="stylesheet" type="text/css" href="css/util.css">
-    <link rel="stylesheet" type="text/css" href="css/main.css">
+	<link rel="stylesheet" type="text/css" href="css/util.css">
+	<link rel="stylesheet" type="text/css" href="css/main.css">
 
-    <link rel="stylesheet" type="text/css" href="/css/userProfile.css">
-    <link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css'>
+	<link rel="stylesheet" type="text/css" href="/css/userProfile.css">
+	<link rel='stylesheet' href='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/css/bootstrap.min.css'>
 
 
 
 </head>
+
 <body>
-    
 
-    <div class="top-bar">
-        <div class="content-topbar flex-sb-m h-full container">
-            <div class="left-top-bar">
-                Free shipping for standard order over $100
-            </div>
 
-            <div class="right-top-bar flex-w h-full">
-                <a href="#" class="flex-c-m trans-04 p-lr-25">
-                    Help & FAQs
-                </a>
+	<div class="top-bar">
+		<div class="content-topbar flex-sb-m h-full container">
+			<div class="left-top-bar">
+				Free shipping for standard order over $100
+			</div>
 
-                
+			<div class="right-top-bar flex-w h-full">
+				<a href="#" class="flex-c-m trans-04 p-lr-25">
+					Help & FAQs
+				</a>
 
-                
-                <% if(user){%>
-					
+
+
+
+				<% if(user){%>
+
 					<a href="/" class="flex-c-m trans-04 p-lr-25">
 						Home
 					</a>
 
-                    <a href="/userProfile" class="flex-c-m trans-04 p-lr-25">
-                        My Account
-                    </a>
+					<a href="/userProfile" class="flex-c-m trans-04 p-lr-25">
+						My Account
+					</a>
 
-                    <a href="/logout" class="flex-c-m trans-04 p-lr-25">
-                        Logout
-                    </a>
-
-                    
-
-                <%}else{%>
-                    <a href="/login" class="flex-c-m trans-04 p-lr-25">
-                        Login
-                    </a>
-                    <a href="/register" class="flex-c-m trans-04 p-lr-25">
-                        Sign Up
-                    </a>
-               <% } %>
-                
-            </div>
-        </div>
-    </div>
-
-    <div><p></p></div>
-    <div><p></p></div>
- 
+					<a href="/logout" class="flex-c-m trans-04 p-lr-25">
+						Logout
+					</a>
 
 
-    <div class="container">
+
+					<%}else{%>
+						<a href="/login" class="flex-c-m trans-04 p-lr-25">
+							Login
+						</a>
+						<a href="/register" class="flex-c-m trans-04 p-lr-25">
+							Sign Up
+						</a>
+						<% } %>
+
+			</div>
+		</div>
+	</div>
+
+	<div>
+		<p></p>
+	</div>
+	<div>
+		<p></p>
+	</div>
+
+
+
+	<div class="container">
 		<div class="main-body">
 			<div class="row">
 				<div class="col-lg-4">
 					<div class="card">
 						<div class="card-body">
 							<div class="d-flex flex-column align-items-center text-center">
-								<img src="/Photos/userImages/<%= user.image %>" alt="Admin" class="rounded-circle p-1 bg-primary" width="110">
+								<img src="/Photos/userImages/<%= user.image %>" alt="Admin"
+									class="rounded-circle p-1 bg-primary" width="110">
 								<div class="mt-3">
-									<h4> <%= user.name %> </h4>
+									<h4>
+										<%= user.name %>
+									</h4>
 									<!-- <p class="text-secondary mb-1"></p>
 									<p class="text-muted font-size-sm"></p>
 									<button class="btn btn-primary">Follow</button>
@@ -85,95 +94,140 @@
 							</div>
 							<hr class="my-4">
 							<ul class="list-group list-group-flush">
-								<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="width: 310px;">
-									<a href="/userProfile"> <button type="button" class="btn btn-outline-info" style="width: 280px;">User Profile</button> </a>
+								<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
+									style="width: 310px;">
+									<a href="/userProfile"> <button type="button" class="btn btn-outline-info"
+											style="width: 280px;">User Profile</button> </a>
 								</li>
-                                <li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="width: 310px;">
-									<a href="/changePassword"> <button type="button" class="btn btn-outline-info" style="width: 280px;">Change Password</button> </a>
+								<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
+									style="width: 310px;">
+									<a href="/changePassword"> <button type="button" class="btn btn-outline-info"
+											style="width: 280px;">Change Password</button> </a>
 								</li>
-								<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="width: 310px;">
-									<a href="/address"> <button type="button" class="btn btn-info" style="width: 280px;">Address Management</button> </a>
+								<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
+									style="width: 310px;">
+									<a href="/address"> <button type="button" class="btn btn-info"
+											style="width: 280px;">Address Management</button> </a>
 								</li>
-								<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap" style="width: 310px;">
-									<a href="/order"> <button type="button" class="btn btn-outline-info" style="width: 280px;">Order</button> </a>
+								<li class="list-group-item d-flex justify-content-between align-items-center flex-wrap"
+									style="width: 310px;">
+									<a href="/order"> <button type="button" class="btn btn-outline-info"
+											style="width: 280px;">Order</button> </a>
 								</li>
-								
+
 							</ul>
 						</div>
 					</div>
 				</div>
 
-				<div class="card mb-4">
-                    <div class="card-header">Account Details</div>
-                    <div class="card-body">
-                        <form>
-                            <!-- Form Group (username)-->
-                            <div class="mb-3">
-                                <label class="small mb-1" for="inputUsername">Username (how your name will appear to other users on the site)</label>
-                                <input class="form-control" id="inputUsername" type="text" placeholder="Enter your username" value="username">
-                            </div>
-                            <!-- Form Row-->
-                            <div class="row gx-3 mb-3">
-                                <!-- Form Group (first name)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputFirstName">First name</label>
-                                    <input class="form-control" id="inputFirstName" type="text" placeholder="Enter your first name" value="Valerie">
-                                </div>
-                                <!-- Form Group (last name)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputLastName">Last name</label>
-                                    <input class="form-control" id="inputLastName" type="text" placeholder="Enter your last name" value="Luna">
-                                </div>
-                            </div>
-                            <!-- Form Row        -->
-                            <div class="row gx-3 mb-3">
-                                <!-- Form Group (organization name)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputOrgName">Organization name</label>
-                                    <input class="form-control" id="inputOrgName" type="text" placeholder="Enter your organization name" value="Start Bootstrap">
-                                </div>
-                                <!-- Form Group (location)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputLocation">Location</label>
-                                    <input class="form-control" id="inputLocation" type="text" placeholder="Enter your location" value="San Francisco, CA">
-                                </div>
-                            </div>
-                            <!-- Form Group (email address)-->
-                            <div class="mb-3">
-                                <label class="small mb-1" for="inputEmailAddress">Email address</label>
-                                <input class="form-control" id="inputEmailAddress" type="email" placeholder="Enter your email address" value="name@example.com">
-                            </div>
-                            <!-- Form Row-->
-                            <div class="row gx-3 mb-3">
-                                <!-- Form Group (phone number)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputPhone">Phone number</label>
-                                    <input class="form-control" id="inputPhone" type="tel" placeholder="Enter your phone number" value="555-123-4567">
-                                </div>
-                                <!-- Form Group (birthday)-->
-                                <div class="col-md-6">
-                                    <label class="small mb-1" for="inputBirthday">Birthday</label>
-                                    <input class="form-control" id="inputBirthday" type="text" name="birthday" placeholder="Enter your birthday" value="06/10/1988">
-                                </div>
-                            </div>
-                            <!-- Save changes button-->
-                        
+				<div class="card mb-4 w-50">
+					<div class="card-header">Address Details</div>
+					<div class="card-body">
+
+						<div class="container">
+							<div class="card">
+								<div class="card-header"> <a href="/addAddress"> <button class="btn btn-success w-100" >Add Address</button> </a> </div>
+								<% if (addressData.addresses && addressData.addresses.length > 0) { %>
+
+									<% for(let i=0 ; i<addressData.addresses.length ; i++){ %>
+
+										<div class="card-body">
+											<!-- <input type="radio"> -->
+											<h5 class="card-title">
+												<%= addressData.addresses[i].addressType %>
+											</h5>
+											<p class="card-text">
+													<p>
+														<span style="margin-right: 15px; font-weight: bold;" > <%= addressData.addresses[i].name %> </span>
+														<span style="font-weight: bold;" > <%= addressData.addresses[i].mobile %> </span>
+													</p>
+													<%= addressData.addresses[i].address %>
+													<%= addressData.addresses[i].locality %>
+													<%= addressData.addresses[i].city %>
+													<%= addressData.addresses[i].state %>
+													<%= addressData.addresses[i].pincode %>
+											</p>
+											<button type="button" class="btn btn-info" onclick="editAddress('<%= addressData.addresses[i]._id %>')" > Edit </button>
+											<button type="button" class="btn btn-danger" onclick="deleteAddress('<%= addressData.addresses[i]._id %>')" > Delete </button>
+										</div>
+										<hr>
+
+									<%	} %>
+								<% } else { %>
+									<p style="text-align: center; margin-top: 20px;"> No address available. </p>
+								<% } %>
+
 								
-								<div class="col-sm-9 text-secondary">
-									<input type="button" class="btn btn-primary px-4" value="Save Changes">
-									<a href="/addAddress"> <input type="button" class="btn btn-success px-4" value="Add Address"> </a>
-								</div>
-						
-                        </form>
-                    </div>
-                </div>
+							</div>
+						</div>
+					</div>
+				</div>
 
 
-			
+
 			</div>
 		</div>
 	</div>
-    <script src='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js'></script>
+
+	<script src="http://localhost:8000/js/jquery.min.js"></script>
+	<!-- Include Bootstrap JS -->
+	<script src="http://localhost:8000/js/bootstrap.bundle.min.js"></script>
+
+	<script src='https://cdn.jsdelivr.net/npm/bootstrap@4.5.0/dist/js/bootstrap.bundle.min.js'></script>
+
+	<!-- cdn for Axios -->
+	<script src="https://cdn.jsdelivr.net/npm/axios/dist/axios.min.js"></script>
+	<!-- cdn for sweet alert -->
+	<script src="https://cdn.jsdelivr.net/npm/sweetalert2@10"></script>
+
+	<script>
+
+		async function editAddress(addressId){
+			window.location.href = `/address/editAddress?id=${addressId}`;
+		}
+
+		async function deleteAddress(id) {
+			const confirmation = await Swal.fire({
+				title: 'Are you sure?',
+				text: 'You won\'t be able to revert this!',
+				icon: 'warning',
+				showCancelButton: true,
+				confirmButtonColor: '#3085d6',
+				cancelButtonColor: '#d33',
+				confirmButtonText: 'Yes, delete it!'
+			});
+
+			if (confirmation.isConfirmed) {
+				try {
+					const response = await axios.delete('http://localhost:8000/address/delete', { data: { id } });
+					if (response.data.success) {
+						await Swal.fire({
+							icon: 'success',
+							title: 'Deleted!',
+							text: response.data.message
+						}).then(() => {
+							window.location.href = '/address';
+						});
+					} else {
+						await Swal.fire({
+							icon: 'error',
+							title: 'Error',
+							text: response.data.message
+						});
+						window.location.href = '/address';
+					}
+				} catch (error) {
+					console.error("Error deleting address: ", error.message);
+					Swal.fire({
+						icon: 'error',
+						title: 'Error',
+						text: 'There was an error deleting the address'
+					});
+				}
+			}
+		}
+
+	</script>
 
 
 </body>
