--- a/views/users/product.ejs
+++ b/views/users/product.ejs
@@ -101,19 +101,14 @@
 						<ul class="main-menu">
 							<li>
 								<a href="/">Home</a>
-								<ul class="sub-menu">
-									<li><a href="index.html">Homepage 1</a></li>
-									<li><a href="home-02.html">Homepage 2</a></li>
-									<li><a href="home-03.html">Homepage 3</a></li>
-								</ul>
 							</li>
 
 							<li class="active-menu">
 								<a href="/products">Shop</a>
 							</li>
 
-							<li class="label1" data-label1="hot">
-								<a href="shoping-cart.html">Features</a>
+							<li>
+								<a href="/shoping-cart">Cart</a>
 							</li>
 
 							<li>
